header/footer/devise

--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ body {
 	font: 36px Calibri, sans-serif;
 	font-weight: 100;
 	line-height: 1em;
-	margin-eft: 20px;
+	margin-left: 20px;
 }
 
 .footer {
