--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -1,105 +1,5 @@
-<html>
-<head>
-   <style>
-
-body {
-    padding-top: 50px;
-    padding-bottom: 25px;
-    color: #200c60;
-}
-.gradientheader {
-    background: linear-gradient(#200c60, #836fbe);
-}
-.purpletext {
-    height: 225px;
-    color: #200c60;
-}
-
-#gold {
-    color: #d7903f;
-}
-.whitetext {
-    color: white;
-}
-.fuck *, .jumbotron * {
-    text-align: center;
-    margin: 0 auto;
-}
-.blue {
-    background-color: #200c60;
-}
-.footer {
-    background-color: #836fbe; /*#351c7a; */
-    width: 100%;
-    position: fixed;
-    bottom: 0px;
-}
-.nav.navbar-nav.navbar-right li a {
-    color: #efefef;
-}
-.navbar-header.page-scroll a {
-    color: #efefef; /* #d7903f; */
-}
-.footer div {
-    color: #FFFFFF;
-    font: 12px Calibri, sans-serif;
-    line-height: 1.5em;
-    margin-right: 25px;
-    text-align: center;
-}
-.nav.navbar-nav.navbar-right li a:hover {
-  color: grey;
-}
-</style>
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-  <!-- Latest compiled JavaScript -->
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-</head>
-
 <body>
-     <nav class="navbar navbar-default navbar-fixed-top gradientheader">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#index.html">LifeCare Alliance</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="stats.html">Scoreboard</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="profile.html">Profile</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Add Points</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-
-<div class="jumbotron purpletext">
+<div class="jumbotron purpletext" style="padding-top:5%">
   <h1 >Wellness Tracker   <span id="gold" class="glyphicon glyphicon-apple"></span></h1> 
   <p>Earn rewards from your employer by recording your healthy choices and activities every day!</p> 
 </div>
@@ -121,12 +21,4 @@ body {
     <button>register</button>
     </div>
 </div>
-
-
-<div class="footer">
-    <div>
-      Built by OSU Software Capstone Class of 2016
-    </div>
-</div>
 </body>
-</html>
