user registration and login

--- a/blog/app/assets/stylesheets/main.scss
+++ b/blog/app/assets/stylesheets/main.scss
@@ -130,7 +130,7 @@ body {
 .whitetext {
     color: white;
 }
-.jumbotron * {
+.fuck *, .jumbotron * {
     text-align: center;
     margin: 0 auto;
 }
