--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -3,22 +3,7 @@
   <h1 >Wellness Tracker   <span id="gold" class="glyphicon glyphicon-apple"></span></h1> 
   <p>Earn rewards from your employer by recording your healthy choices and activities every day!</p> 
 </div>
+  <%= render 'welcome/login' %>
 
-<div class="fuck">
-    <div class="form-group">
-        <h3> Sign In </h3>
-        <br/>
-      <p> Username: </p>
-      <input style="width: 200px;" type="text" class="form-control" id="usr">
-    </div>
-    <div class="form-group">
-      <p> Password: </p>
-      <input style="width: 200px;" type="password" class="form-control" id="pwd">
-    </div>
-    <br/>
-    <div>
-    <button>login</button> 
-    <button>register</button>
-    </div>
 </div>
 </body>
