welcome page login

--- a/blog/app/views/welcome/index.html.erb
+++ b/blog/app/views/welcome/index.html.erb
@@ -3,7 +3,9 @@
   <h1 >Wellness Tracker   <span id="gold" class="glyphicon glyphicon-apple"></span></h1> 
   <p>Earn rewards from your employer by recording your healthy choices and activities every day!</p> 
 </div>
-  <%= render 'welcome/login' %>
+
+
+  <%= render 'login' %>
 
 </div>
 </body>
