--- a/blog/app/views/welcome/_login.html.erb
+++ b/blog/app/views/welcome/_login.html.erb
@@ -3,11 +3,12 @@
   <h3>Log in</h3>
   <div class="form-group">
     <%= form_tag '/login' do %>
-      <p>Email: </p><%= text_field_tag :email%>
-      <p>Password:</p><%= password_field_tag :password%>
+      </br>
+      <%= text_field_tag :email, nil, :placeholder => 'Enter User Email...'%>
+      <%= password_field_tag :password, nil, :placeholder => 'Enter Password...'%>
       <br/>
-      <%= submit_tag "Submit" %>
-      <%= link_to "Sign up", '/signup', method: :get %>
+      <%= submit_tag "Login", :class => "btn btn-primary btn-lg subsign" %>
+      <%= link_to "Sign up", '/signup', :class => "btn btn-primary btn-lg subsign", method: :get %>
     <% end %>
   </div>
 
