--- a/blog/app/views/layouts/application.html.erb
+++ b/blog/app/views/layouts/application.html.erb
@@ -28,7 +28,10 @@
 
 
 <!-- Generate individual page content -->
+<div class="yield">
 <%= yield %>
+</div>
+
 
 <%= render :partial => 'layouts/footer'%>
 
