added password reovery page, password change page, user guide

--- a/blog/app/views/layouts/_footer.html.erb
+++ b/blog/app/views/layouts/_footer.html.erb
@@ -2,5 +2,6 @@
     <div class="row">
       <p>1699 W Mound St. Columbus &#x2022; Ohio 43223 &#x2022; <i class="fa fa-phone"></i> 614-278-3130 &#x2022; <i class="fa fa-fax"></i> 614-278-3143</p>
       <p>Built by OSU Software Capstone Class of 2016</p> 
+	  <%= link_to "User guide", '/guide' ,method: :get %>
     </div>
 </div>
