--- a/blog/app/views/users/show.html.erb
+++ b/blog/app/views/users/show.html.erb
@@ -5,4 +5,5 @@
 
 <p> department: <span> <%= @user.department %> </p>
 <p> email: <span> <%= @user.email %> </p>
+<p><%= link_to "Change your password", '/change', method: :get %><p>
 </div>
