--- a/blog/app/views/welcome/_login.html.erb
+++ b/blog/app/views/welcome/_login.html.erb
@@ -1,4 +1,3 @@
-
 <div class="fuck">   
   <h3>Log in</h3>
   <div class="form-group">
@@ -9,6 +8,7 @@
       <br/>
       <%= submit_tag "Login", :class => "btn btn-primary btn-lg subsign" %>
       <%= link_to "Sign up", '/signup', :class => "btn btn-primary btn-lg subsign", method: :get %>
+	 </br><%= link_to "Forgot your password?", '/recover_password', method: :get %>
     <% end %>
   </div>
 
