--- a/blog/app/assets/stylesheets/activities.css
+++ b/blog/app/assets/stylesheets/activities.css
@@ -3,3 +3,14 @@
 	margin-top: 60px;
 	margin-bottom: 60px;
 }
+
+body {
+    padding-top: 50px;
+    padding-bottom: 25px;
+    color: #200c60;
+}
+
+table {
+	width: 100%;
+	height: 100%;
+}
