Updated css files

--- a/blog/app/assets/stylesheets/main.scss
+++ b/blog/app/assets/stylesheets/main.scss
@@ -199,3 +199,18 @@ color: #3a87ad;
 background-color: #d9edf7;
 border-color: #bce8f1;
 }
+
+.pass_recover{
+	width:35%!important;
+    -moz-border-radius:15px;
+    border-radius: 15px;
+    border:solid 1px black;
+    padding:5px;
+    margin-bottom:5%;
+}
+
+.recover-Title{
+	padding-top:2%;
+	font-size:48px;
+}
+
