--- a/blog/app/views/users/change.html.erb
+++ b/blog/app/views/users/change.html.erb
@@ -1,16 +1,16 @@
 <div class="fuck">
-	<h3>Change your password</h3>
+	<h2 id="change-pass">Change your password</h2>
 	<div class ="form-group">
 		<%= form_tag '/change' do %>
 			</br>
 			<p>Current Password</p>
-			<%= text_field_tag :placeholder => 'Enter current password...' %>
+			<%= text_field_tag :current, nil,:placeholder => 'Enter current password...' %>
 			<br/>
 			</br>
 			<p>Desired Password</p>
-			<%= text_field_tag :placeholder => 'Enter desired password...' %>
+			<%= text_field_tag :new, nil, :placeholder => 'Enter desired password...' %>
 			<br/>
-			<%= submit_tag "Submit", :class => "btn btn-primary btn-lg subsign" %>
+			<%= submit_tag "Submit", :class => "btn btn-primary btn-lg subsign new-pass" %>
 		<% end %>
 	</div>
 </div>
