--- a/blog/app/views/welcome/recover_password.html.erb
+++ b/blog/app/views/welcome/recover_password.html.erb
@@ -1,9 +1,9 @@
 <div class="fuck">
-	<h3>Recover your password</h3>
+	<h3 class="recover-Title">Please enter you email address</h3>
 	<div class ="form-group">
 		<%= form_tag '/recover_password' do %>
 			</br>
-			<%= text_field_tag :email, nil, :placeholder => 'Enter User Email...' %>
+			<%= text_field_tag :email, nil, :class => "pass_recover", :placeholder => 'Enter User Email...' %>
 			<br/>
 			<%= submit_tag "Submit", :class => "btn btn-primary btn-lg subsign" %>
 		<% end %>
