--- a/blog/app/views/activities/index.html.erb
+++ b/blog/app/views/activities/index.html.erb
@@ -31,10 +31,39 @@
 				      	<i class="glyphicon glyphicon-remove pull-left"></i>&nbsp;Delete
 				    <%end%>
 				</td>
+				<<!-- otherwise they are only allowed to log activities -->
 				<% else %>
 				<td>
+				<% if !activity.needsquantity %>
 					<%= link_to actions_create_path(:user_id => current_user.id, :activity_id => activity.id), method: :post, :class => "btn btn-default btn-md" do  %>
-					<i class="glyphicon glyphicon-plus pull-left"></i>&nbsp;Log Activity
+						<i class="glyphicon glyphicon-plus pull-left"></i>&nbsp;Log Activity
+					<%end%>
+				<%else%>
+					<!-- Button trigger modal (for activities that can have different quantities) -->
+					<button class="btn btn-default btn-md" data-toggle="modal" data-target="#approvalModal">
+						<i class="glyphicon glyphicon-plus pull-left"></i>&nbsp;Log Activity
+					</button>
+					<!-- Modal -->
+					<div class="modal fade" id="approvalModal" tabindex="-1" role="dialog" aria-labelledby="approvalModalLabel" aria-hidden="true">
+					  <div class="modal-dialog">
+					    <div class="modal-content">
+					      <div class="modal-header">
+					        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+					        <h4 class="modal-title">Quantity</h4>
+					      </div>
+					      <div class="modal-body">
+					        <%= form_tag actions_create_path(:user_id => current_user.id, :activity_id => activity.id, :minutes => params[:minutes]), method: :post, :class => "form-horizontal" do %>
+					              <%= label_tag 'minutes', 'How many minutes did you exercise?', :class => 'control-label' %>
+					              <%= text_field_tag :minutes, params[:minutes], :class => "form-control" %>
+					      </div>
+					      <div class="modal-footer">
+					        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancel</button>
+					           <%= submit_tag "Submit", name: nil, class: "btn btn-success" %>
+					        <% end %>
+					      </div>
+					    </div><!-- /.modal-content -->
+					  </div><!-- /.modal-dialog -->
+					</div><!-- /.modal -->
 				<%end%>
 				</td>
 				<% end %>
