made department entity and created admin functionality

--- a/blog/app/views/activities/index.html.erb
+++ b/blog/app/views/activities/index.html.erb
@@ -31,7 +31,7 @@
 				      	<i class="glyphicon glyphicon-remove pull-left"></i>&nbsp;Delete
 				    <%end%>
 				</td>
-				<<!-- otherwise they are only allowed to log activities -->
+				<!-- otherwise they are only allowed to log activities -->
 				<% else %>
 				<td>
 				<% if !activity.needsquantity %>
