--- a/blog/app/views/layouts/_header.html.erb
+++ b/blog/app/views/layouts/_header.html.erb
@@ -35,6 +35,9 @@
                     <li class="page-scroll">
                         <%= link_to "Edit Activities", activities_path %>
                     </li>
+                    <li class="page-scroll">
+                        <%= link_to "Edit Departments", departments_path %>
+                    </li>
                     <% else %>
                     <!-- the user is a regular user, so link to add points TODO change link -->
                     <li class="page-scroll">
