--- a/blog/app/views/users/new.html.erb
+++ b/blog/app/views/users/new.html.erb
@@ -9,7 +9,9 @@
     <p> First name:</p> <%= f.text_field :fname%> 
     <p> Last Name:</p> <%= f.text_field :lname%> 
     <p> Email:</p> <%= f.text_field :email%>
-    <p> Department:</p> <%= f.text_field :department%>
+    <% if true %>
+    <p> Department:</p><%= f.collection_select :department_id, @departments, :id, :name, include_blank: true %>
+    <% end %>
     <p> Password:</p> <%= f.password_field :password%>
     <p> Password Confirmation:</p> <%= f.password_field :password_confirmation%>    
     <br/> <br/>
