--- a/blog/app/assets/stylesheets/welcome.css
+++ b/blog/app/assets/stylesheets/welcome.css
@@ -99,3 +99,14 @@ button, html input[type=button], input[type=reset]{
 .yield{
     height:130%;
 }
+
+.btn-group-lg>.btn, .btn-lg {
+
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.3333333;
+  border-radius: 6px;
+  margin-top: 2%;
+  margin-left: 3%;
+  margin-bottom: 2%;
+}
