--- a/blog/app/views/activities/index.html.erb
+++ b/blog/app/views/activities/index.html.erb
@@ -6,7 +6,7 @@
 	        <input type="text" class="form-control" id="filter" placeholder="Search..." value="" />
 	    </div>
 	</form>
-	<table>
+	<table class="activities-table">
 		<thead>
 			<tr>
 				<td>Description</td>
