--- a/blog/app/assets/stylesheets/activities.css
+++ b/blog/app/assets/stylesheets/activities.css
@@ -1,16 +1,13 @@
-.sam-write-your-own-css {
-	
-	margin-top: 60px;
-	margin-bottom: 60px;
-}
-
 body {
     padding-top: 50px;
     padding-bottom: 25px;
     color: #200c60;
 }
 
-table {
+table{
 	width: 100%;
 	height: 100%;
 }
+
+table { table-layout: fixed; }
+th, td { width: 100%; }
