--- a/blog/app/assets/stylesheets/welcome.css
+++ b/blog/app/assets/stylesheets/welcome.css
@@ -110,3 +110,7 @@ button, html input[type=button], input[type=reset]{
   margin-left: 3%;
   margin-bottom: 2%;
 }
+
+.header-text{
+    color:#fff;
+}
