--- a/blog/app/assets/stylesheets/activities.css
+++ b/blog/app/assets/stylesheets/activities.css
@@ -9,5 +9,7 @@ table{
 	height: 100%;
 }
 
-table { table-layout: fixed; }
-th, td { width: 100%; }
+.activities-table{
+	background-color: white;
+}
+
