fixed some bugs

--- a/blog/app/views/activities/index.html.erb
+++ b/blog/app/views/activities/index.html.erb
@@ -6,11 +6,11 @@
 	        <input type="text" class="form-control" id="filter" placeholder="Search..." value="" />
 	    </div>
 	</form>
-	<table>
+	<table class = "table table-condensed">
 		<thead>
 			<tr>
-				<td>Description</td>
-				<td>Value</td>
+				<th class = "text-left">Description</th>
+				<th class = "text-left">Value</th>
 			</tr>
 		</thead>
 		<tbody>
