--- a/blog/app/views/users/index.html.erb
+++ b/blog/app/views/users/index.html.erb
@@ -26,7 +26,7 @@
 					<% @users.each do |x| %>
 						<tr>
 							<td><%= link_to x.email, x %></td>
-				      		<td><%= link_to x.department_id, x %></td>
+				      		<td><%= link_to x.name, x %></td>
 				      		<td>0</td>
 						</tr>
 					<% end %>
