--- a/blog/app/views/activities/_form.html.erb
+++ b/blog/app/views/activities/_form.html.erb
@@ -1,3 +1,6 @@
+
+<div class="col-md-2"></div>
+<div class="col-md-8">
 <%= form_for @activity do |a| %>
  
   <% if @activity.errors.any? %>
@@ -28,3 +31,6 @@
 </div>
 
 <% end %>
+
+</div>
+<div class="col-md-2"></div>
