--- a/blog/app/assets/stylesheets/application.css.sass
+++ b/blog/app/assets/stylesheets/application.css.sass
@@ -3,4 +3,5 @@
 @import "main.scss"
 @import "welcome.css"
 @import "change.css"
-@import "scoreboard.css"
+@import "jquery-ui"
+@import "bootstrap-datepicker3"
