--- a/blog/app/views/layouts/_footer.html.erb
+++ b/blog/app/views/layouts/_footer.html.erb
@@ -1,7 +1,5 @@
 <div class="footer">
-    <div class="row">
-      <p>1699 W Mound St. Columbus &#x2022; Ohio 43223 &#x2022; <i class="fa fa-phone"></i> 614-278-3130 &#x2022; <i class="fa fa-fax"></i> 614-278-3143</p>
-      <p>Built by OSU Software Capstone Class of 2016</p> 
-	  <%= link_to "User guide", '/guide' , class: "user-guide", method: :get %>
-    </div>
+	<div>
+      <p>1699 W Mound St. Columbus &#x2022; Ohio 43223 &#x2022; <i class="fa fa-phone"></i> 614-278-3130 &#x2022; Built By OSU Computer Science Students</p>
+	</div>
 </div>
