--- a/blog/app/views/welcome/_login.html.erb
+++ b/blog/app/views/welcome/_login.html.erb
@@ -8,7 +8,7 @@
       <br/>
       <%= submit_tag "Login", :class => "btn btn-primary btn-lg subsign" %>
       <%= link_to "Sign up", '/signup', :class => "btn btn-primary btn-lg subsign", method: :get %>
-	 </br><%= link_to "Forgot your password?", '/recover_password', method: :get %>
+	 </br><%= link_to "(forgot password)", new_password_reset_path %>
     <% end %>
   </div>
 
